minor z-index fix

--- a/includes/css/vicav.css
+++ b/includes/css/vicav.css
@@ -380,7 +380,7 @@ h2.how-to-heading {
     top: 84px;
     right: 0;
     left: 0;
-    z-index: 1030;
+    z-index: 1000;
 }
 
 .sub-nav span {
